--- a/form/register-style.css
+++ b/form/register-style.css
@@ -4,14 +4,15 @@ form{margin-left: 20%;}
 span{font-size: 0.7rem;}
 .hissu{background-color: rgb(255, 86, 86); color: rgb(255, 255, 255);
      border-radius: 5px; padding: 0.3rem;font-family:sans-serif;}
-.kinyu{background-color: rgb(178, 212, 201);width: 70%; }
-.koumoku{background-color: rgb(0, 98, 101); color: aliceblue; 
-     text-align: left; vertical-align: top;}
 
-
+table{width: 78%;}
 table,tr,td{border: solid 2px; border-color: aliceblue; border-collapse: collapse;}
 td{padding: 1%;}
 input{margin: 2px;}
 select{margin-right: 1%;}
+.kinyu{background-color: rgb(178, 212, 201);width: 65%; }
+.koumoku{background-color: rgb(0, 98, 101); color: aliceblue; 
+     text-align: left; vertical-align: top;}
+
 
 button{width: 20%; margin-top: 1%;margin-bottom: 10%; margin-right: 20%; margin-left: 5%;}
